Fix Histogram height on footer on firefox

--- a/packages/components/src/components/as-histogram-widget/as-histogram-widget.scss
+++ b/packages/components/src/components/as-histogram-widget/as-histogram-widget.scss
@@ -17,6 +17,9 @@ as-histogram-widget {
     display: flex;
     position: relative;
     flex: 1;
+
+    /* https://stackoverflow.com/questions/28636832/firefox-overflow-y-not-working-with-nested-flexbox */
+    min-height: 0;
   }
 
   .as-histogram-widget__clear {
